<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_location_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_update_dialog_fragment"
...
            android:theme="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result_search_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:listitem="@layout/layout_search_location_item"
            android:visibility="gone"
            />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_update_dialog_fragment"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/street"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
...
        android:paddingStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/postal_code_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/street_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/city"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
...
        android:paddingEnd="12dp"
        app:layout_constraintStart_toEndOf="@+id/city_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/postal_code"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/state_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/country"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/country_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/postal_code_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/state"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
...
