...
    <string name="search">&#160;&#160;SEARCH&#160;&#160;</string>
    <string name="edit">&#160;&#160;Edit&#160;&#160;</string>
    <string name="button_list_title">List</string>
    <string name="button_map_title">Map</string>
    <string name="no_property_to_display">No Property to Display</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="none">none</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="surface">Surface</string>
    <string name="description">Description</string>
    <string name="media">Media</string>
    <string name="location">Location</string>
...
    <string name="default_currency">Default Currency</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="settings">Settings</string>
    <string name="update_location">Update Location</string>
    <string name="search_location_hint">Search by address, street, city, postal code or country</string>
    <string name="search_result">Search Results</string>
    <string name="create_location">Create Location</string>
</resources>

