...
                    android:hint="@string/state"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/map_view_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
...
